--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+.idea/
 .DS_Store
 /build
 /captures
@@ -14,3 +15,4 @@
 .cxx
 local.properties
 libsql_android/src/main/jni/libsql_android/libsql/target
+kls_database.db
