--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,8 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 protobufGradlePlugin = "0.9.4"
 protobufJavalite = "3.19.1"
+coreKtx = "1.13.1"
+kotlin = "2.0.10"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -11,9 +13,11 @@ ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitV
 protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufJavalite" }
 rules = { module = "androidx.test:rules", version = "1.6.1" }
 runner = { module = "androidx.test:runner", version = "1.6.1" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 
 [plugins]
 android-library = { id = "com.android.library", version.ref = "agp" }
 rust-android = { id = "org.mozilla.rust-android-gradle.rust-android", version = "0.9.4" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobufGradlePlugin" }
+jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
